projects/nx/src/apps/*sso/yaldap/ldaps.tlsroute.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/include-unifi: "true"
  name: ldaps-tlsroute
spec:
  parentRefs:
    - kind: Gateway
      name: ldaps-gateway
      namespace: traefik-system
      sectionName: ldaps
  hostnames:
    - ldaps.chezmoi.sh
  rules:
    - backendRefs:
        - kind: Service
          name: yaldap
          port: 389
